--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,28 @@
+
 .footer {
 background-color:#00838f;
 }
 
-.p-footer{
-  text-align: center;
-  color: white;
+.img-github-footer{
+width: 50%;
+height: 50%;
 }
 
-.img-github-footer{
-width: 4.5%;}
-
 .github-footer{
-margin:0 auto;
+margin:auto auto;
 display:table;
 padding-top: 10px;
 padding-bottom:10px ;
 }
+
 .copyright-footer{
 background-color: #006973 ;
 }
+
+.p-footer{
+  color: white;
+  text-align: center;
+}
+
+
+
