--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,73 @@
-.img-background-main{
-  width: 100%;
-  height: 50%;
-
+@font-face{
+  font-family: "Ubuntu";
+  src: url("../src/Ubuntu-Regular.ttf")
 }
-.footer {
-background-color:#00838f;
+
+body {
+  margin: 0;
+}
+.menu{
+  height: 0px !important;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    background-color: #333170;
+    top: 0;
+    width: 100%;
+    position: fixed; 
+}
+
+.guscel{
+  float: left;
+  text-decoration: solid;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  transition: all 0.3s;
+  cursor: pointer;
+  font-family: Ubuntu;
+  font-size: 35px;
+  font-weight: 700;
+}
+.guscel:hover{
+  cursor: default;
+}
+
+li {
+    float: right;
+}
+
+li a {
+    text-decoration: solid;
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    font-weight: 700;
+    font-size: 25px;
+    transition: all 0.3s;
+    cursor: pointer;
+    
+}
+li a:hover {
+  text-decoration: none;
+  color: white;
+  -webkit-transform: scale(1.5);
+  transform: scale(1.3);
+  
+}
+
+
+img {
+  height: 80%;
+  width: 100%;
+}
+
+.footer{
+background-color:#503d7b;
 }
 
 .img-github-footer{
@@ -20,7 +83,7 @@ padding-bottom:10px ;
 }
 
 .copyright-footer{
-background-color: #006973 ;
+background-color: #333170 ;
 }
 
 .p-footer{
