--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,17 @@
   font-family: "Ubuntu";
   src: url("../src/Ubuntu-Regular.ttf")
 }
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
 
 .menu{
   height: 0px !important;
@@ -61,6 +72,7 @@ li a:hover {
 img {
   height: 80%;
   width: 100%;
+  
 }
 
 
@@ -72,11 +84,15 @@ img {
 
 .titulo{
   text-align: center;
+  font-family: Ubuntu;
+  font-size: 50px;
+  margin-top: 20px;
 }
 .titulo-principal{
   text-align: center;
   font-size: 50px;
   margin-bottom: 20px;
+  font-family: Ubuntu;
 }
 .segunda-parte-form{
   display: flex;
@@ -112,9 +128,16 @@ img {
 }
 
 .imagem-perfil{
-  border-radius: 100%;
+  margin-top: 20px;
   width: 30%;
   height: 50%;
+  min-width: 300px;
+}
+
+.projetos{
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 130px;
 }
 
 .botao-enviar{
@@ -126,7 +149,7 @@ img {
   align-content: center;
   margin-top: 20px;
   margin-bottom: 20px;
-}
+  }
 
 .footer{
 background-color:#503d7b;
@@ -153,6 +176,6 @@ background-color: #333170 ;
   text-align: center;
   margin-bottom: 0px;
 }
-
-
-
+body{
+  background-color: #EEE !important;
+}
