--- a/css/style.css
+++ b/css/style.css
@@ -2,64 +2,70 @@
   font-family: "Ubuntu";
   src: url("../assets/Ubuntu-Regular.ttf")
 }
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+*{margin: 0;}
+
 :root {
   --animate-duration: 800ms;
   --animation-delay: 1.5s;
 }
 .container-fluid{
   width: 100%;
+  float: none;
   background-color:#333170;
-  margin: 0px;
 }
-.menu{
-  height: 0px ;
+
+main{
+  width: 100%;
 }
 .titulo.animate__animated.animate__slideInLeft{
   --animate-duration: 3s;
   color: white;
-  margin-top: 0;
 } 
-
 
 .menu.animate__animated.animate__fadeInRight{
   --animate-duration: 2s;
+  width: 100%;
+  display: inline-flex;
+  flex-direction: row-reverse;
+  justify-content: space-around;
+
 }
+
+.imagem-principal{
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+}
+
+
+figcaption{
+ position: absolute;
+ top: 35%;
+ font-size: 100px;
+ color: white;
+  
+}
+
 ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  background-color: #333170;
   top: 0;
   width: 100%;
   position: absolute; 
 }
 
-.guscel{
-  float: left;
-  text-decoration: solid;
-  color: #EEE;
-  text-align: center;
-  padding: 14px 16px;
-  transition: all 0.3s;
-  cursor: pointer;
-  font-family: Ubuntu;
-  font-size: 35px;
-  font-weight: 700;
-}
-.guscel:hover{
-  cursor: default;
-}
 
-li {
-  float: right;
-}
 
 li a {
   text-decoration: solid;
   display: inline-block;
   color: #EEE;
   text-align: center;
-  padding: 14px 16px;
   font-weight: 700;
   font-size: 25px;
   transition: all 0.3s;
@@ -128,9 +134,7 @@ img {
 }
 .paragrafo{
   text-align: justify;
-  margin-left: 30px;
   margin-top: 20px;
-  margin-right: 30px;
   font-family: Ubuntu;
   font-size: 20px;
 }
@@ -149,31 +153,32 @@ img {
 }
 
 .botao-enviar{
-  width: 10%;
+  width: 20%;
+  display: flex;
+  font-size: 1rem;
   background-color: #333170;
   border-radius: 5%;
-  font-size: 15px;
   color: white;
   align-content: center;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  justify-content: center;
+  margin-top: 1%;
+  margin-bottom: 1%;
   }
 
 .footer{
   background-color:#503d7b;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
 }
 
 .img-github-footer{
-  width: 50%;
-  height: 50%;
+  width: 8%;
+  padding-top: 1%;
+  padding-bottom: 1%;
 }
 
-.github-footer{
-  margin:auto auto;
-  display:table;
-  padding-top: 10px;
-  padding-bottom:10px ;
-}
 
 .copyright-footer{
   background-color: #333170 ;
@@ -187,6 +192,5 @@ img {
 
 body{
   background-color: #EEE !important;
-  margin: 0 !important;
 }
 
