--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face{
-  font-family: "Ubuntu";
-  src: url("../assets/Ubuntu-Regular.ttf")
+  font-family: "Helbvetica";
+  src: url("../assets/helvetica.otf")
 }
 html, body {
   width: 100%;
@@ -15,11 +15,7 @@ html, body {
   --animate-duration: 800ms;
   --animation-delay: 1.5s;
 }
-.container-fluid{
-  width: 100%;
-  float: none;
-  background-color:#333170;
-}
+
 
 main{
   width: 100%;
@@ -42,13 +38,15 @@ main{
   display: flex;
   justify-content: space-around;
   text-align: center;
+  width: 100%;
+  height: auto;
 }
 
 
 figcaption{
  position: absolute;
  top: 35%;
- font-size: 100px;
+ font-size: 10rem;
  color: white;
   
 }
@@ -67,7 +65,7 @@ li a {
   color: #EEE;
   text-align: center;
   font-weight: 700;
-  font-size: 25px;
+  font-size: 1.7rem;
   transition: all 0.3s;
   cursor: pointer;
     
@@ -78,7 +76,15 @@ li a:hover {
   color: white;
   -webkit-transform: scale(1.5);
   transform: scale(1.3);
-  
+}
+
+li a:hover::after{
+  content: '';
+  display: block;
+  width: 60%;
+  height: 3px;
+  background: #6d2db0;
+  margin: 0 auto;
 }
 
 img {
@@ -97,16 +103,25 @@ img {
 .titulo{
   text-align: center;
   font-family: Ubuntu;
-  font-size: 50px;
+  font-size: 4rem;
   margin-top: 10px;
   margin-bottom: 5px;
 }
+
+.titulo-form{
+  text-align: start;
+  font-family: Helvetica;
+  font-size: 1rem;
+  margin-top: 10px;
+  margin-bottom: 5px;
+  color: grey;
+}
 .titulo-principal{
   text-align: center;
-  font-size: 50px;
+  font-size: 3.2rem;
   margin-bottom: 20px;
   font-family: Ubuntu;
-  color: white;
+  color: #6d2db0;;
 }
 .segunda-parte-form{
   display: flex;
@@ -121,35 +136,38 @@ img {
   flex-direction: row;
   text-align: center;
   justify-content: center;
-  margin-bottom: 150px;
-  margin-top: 50px;
+  margin-bottom: 10%;
+  margin-top: 5%;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 .informacoes-contato-2{
   display: flex;
   flex-direction: row;
   text-align: center;
   justify-content: center;
-  margin-bottom: 120px;
-  margin-top: 30px;
+  margin-bottom: 10%;
+  margin-top: 10%;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 .paragrafo{
   text-align: justify;
-  margin-top: 20px;
+  margin-top: 2%;
   font-family: Ubuntu;
-  font-size: 20px;
+  font-size: 1.4rem;
 }
 
 .imagem-perfil{
-  margin-top: 0px;
-  width: 30%;
-  height: 50%;
+  width: 25%;
+  height: auto;
   min-width: 300px;
 }
 
 .projetos{
   display: flex;
   flex-direction: row;
-  margin-bottom: 130px;
+  margin-bottom: 12%;
 }
 
 .botao-enviar{
@@ -193,4 +211,13 @@ img {
 body{
   background-color: #EEE !important;
 }
+
+  h2:after {
+    content: '';
+    display: block;
+    width: 10%;
+    height: 3px;
+    background: #6d2db0;
+    margin: 0 auto;
+  }
 
