--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ main{
 }
 .titulo.animate__animated.animate__slideInLeft{
   --animate-duration: 3s;
-  color: white;
+  color: F2FDFF;
 } 
 
 .menu.animate__animated.animate__fadeInRight{
@@ -56,7 +56,7 @@ ul {
 li a {
   text-decoration: solid;
   display: inline-block;
-  color: #EEE;
+  color: #F2FDFF;
   text-align: center;
   font-weight: 700;
   font-size: 1.7rem;
@@ -67,7 +67,7 @@ li a {
 
 li a:hover {
   text-decoration: none;
-  color: white;
+  color:#F2FDFF;
   -webkit-transform: scale(1.5);
   transform: scale(1.3);
 }
@@ -77,7 +77,7 @@ li a:hover::after{
   display: block;
   width: 60%;
   height: 3px;
-  background: #6d2db0;
+  background: #564787;
   margin: 0 auto;
 }
 
@@ -108,14 +108,14 @@ img {
   font-size: 1rem;
   margin-top: 10px;
   margin-bottom: 5px;
-  color: grey;
+  color: #564787;
 }
 .titulo-principal{
   text-align: center;
-  font-size: 3.2rem;
-  margin-bottom: 20px;
+  font-size: 2.2rem;
+  margin-bottom: 5%;
   font-family: Ubuntu;
-  color: #6d2db0;;
+  color: #564787;;
 }
 .segunda-parte-form{
   display: flex;
@@ -168,13 +168,14 @@ img {
   width: 20%;
   display: flex;
   font-size: 1rem;
-  background-color: #333170;
+  background-color: #564787;
   border-radius: 5%;
-  color: white;
+  color: F2FDFF;
   align-content: center;
   justify-content: center;
   margin-top: 1%;
   margin-bottom: 1%;
+  color: #F2FDFF;
   }
 
 .footer{
@@ -193,25 +194,25 @@ img {
 
 
 .copyright-footer{
-  background-color: #333170 ;
+  background-color: #564787 ;
 }
 
 .p-footer{
-  color: white;
+  color: #F2FDFF;
   text-align: center;
   margin-bottom: 0px;
 }
 
 body{
-  background-color: #EEE !important;
+  background-color: #F2FDFF !important;
 }
 
   h2:after {
     content: '';
     display: block;
-    width: 10%;
+    width: 100%;
     height: 3px;
-    background: #6d2db0;
+    background: #564787;
     margin: 0 auto;
   }
 
