--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @font-face{
-  font-family: "Helbvetica";
+  font-family: "Helvetica";
   src: url("../assets/helvetica.otf")
 }
 html, body {
@@ -29,7 +29,7 @@ main{
 }
 .titulo.animate__animated.animate__slideInLeft{
   --animate-duration: 3s;
-  color: F2FDFF;
+  color: #F2FDFF;
 } 
 
 .menu.animate__animated.animate__fadeInRight{
@@ -47,7 +47,7 @@ main{
 .guscel{
   position: absolute;
   text-align: center;
-  left:44.5%;
+  left:10%;
   top: 40%;
   font-size: 10vh;
   font-family: Helvetica;
@@ -56,7 +56,7 @@ main{
 .slogan{
   position: absolute;
   text-align: center;
-  left: 41.5%;
+  left: 13%;
   top: 50%;
   font-size: 5vh;
   font-family: Helvetica;
@@ -111,10 +111,6 @@ li a:hover::after{
   margin: 0 auto;
 }
 
-img {
-  height: 80%;
-  width: 100%;
-}
 
 
 
@@ -150,8 +146,7 @@ img {
 }
 .titulo-principal{
   text-align: center;
-  font-size: 2.2rem;
-  margin-bottom: 5%;
+  font-size: 1.8rem;
   font-family: Ubuntu;
   color: #564787;;
 }
@@ -188,6 +183,7 @@ img {
   margin-top: 2%;
   font-family: Ubuntu;
   font-size: 1.4rem;
+  margin-bottom: 0;
 }
 
 .imagem-perfil{
@@ -245,12 +241,11 @@ body{
   background-color: #F2FDFF !important;
 }
 
-  h2:after {
-    content: '';
-    display: block;
-    width: 100%;
-    height: 3px;
-    background: #564787;
-    margin: 0 auto;
-  }
+
+
+
+.imagem-projetos{
+  border-radius: 10%;
+}
+
 
